ADD - basic HTML & CSS

--- a/index.html
+++ b/index.html
@@ -13,7 +13,15 @@
 <body>
 
     <div class="container">
-        rock-paper-scissors
+        <div class="hands">
+            <div class="pc-hand">pc hand</div>
+            <div class="user-hand">user hand</div>
+        </div>
+        <div class="user-selection">
+            <button id="rock">rock</button>
+            <button id="paper">paper</button>
+            <button id="scissors">scissors</button>
+        </div>
     </div>
 
 </body>
