ADD - points & end game logic

--- a/index.html
+++ b/index.html
@@ -13,9 +13,14 @@
 <body>
 
     <div class="container">
+        <div class="game-result">choose an hand</div>
+        <div class="score">
+            <div class="user-score">user score: 0</div>
+            <div class="pc-score">pc score: 0</div>
+        </div>
         <div class="hands">
-            <div class="pc-hand">pc hand</div>
-            <div class="user-hand">user hand</div>
+            <div class="pc-hand">pc choice: undefined</div>
+            <div class="user-hand">user choice: undefined</div>
         </div>
         <div class="user-selection">
             <button id="rock">rock</button>
