EDIT - game logic & DOM

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
     <div class="container">
-        <div class="game-result">choose an hand</div>
+        <div class="match-result">choose an hand</div>
         <div class="score">
             <div class="user-score">user score: 0</div>
             <div class="pc-score">pc score: 0</div>
