--- a/index.html
+++ b/index.html
@@ -19,13 +19,25 @@
             <div class="pc-score">pc score: 0</div>
         </div>
         <div class="hands">
-            <div class="pc-hand">pc choice: undefined</div>
-            <div class="user-hand">user choice: undefined</div>
+            <div class="pc-hand">
+                <p>PC</p>
+                <img src="./src/images/blank.png">
+            </div>
+            <div class="user-hand">
+                <p>PLAYER</p>
+                <img src="./src/images/blank.png">
+            </div>
         </div>
         <div class="user-selection">
-            <button id="rock">rock</button>
-            <button id="paper">paper</button>
-            <button id="scissors">scissors</button>
+            <button id="rock">
+                <img src="./src/images/rock.png" alt="rock">
+            </button>
+            <button id="paper">
+                <img src="./src/images/paper.png" alt="paper">
+            </button>
+            <button id="scissors">
+                <img src="./src/images/scissors.png" alt="scissors">
+            </button>
         </div>
     </div>
 
