--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
     <div class="container">
         <div class="match-count">match 1 / 5</div>
+        <div class="match-result">result</div>
         <div class="score">
             <div class="user-score">user score: 0</div>
             <div class="pc-score">pc score: 0</div>
@@ -40,7 +41,6 @@
         </div>
     </div>
     <div class="overlay visibility-hidden">
-        <div class="match-result visibility-hidden"></div>
         <h1 class="final-result visibility-hidden"></h1>
         <button id="restart-game" class="visibility-hidden">Restart game</button>
     </div>
