EDIT - score visulization

--- a/index.html
+++ b/index.html
@@ -16,19 +16,29 @@
 
 <body>
     <div class="container">
-        <div class="match-count">match 1 / 5</div>
+        <div class="match-count">Match 1 / 5</div>
         <div class="match-result">result</div>
-        <div class="score">
-            <div class="user-score">user score: 0</div>
-            <div class="pc-score">pc score: 0</div>
-        </div>
         <div class="hands">
             <div class="pc-hand">
-                <p>PC</p>
+                <div class="pc-score">
+                    <span class="score-title">
+                        CPU score
+                    </span>
+                    <span class="score-number">
+                        0
+                    </span>
+                </div>
                 <img src="./src/images/blank.png">
             </div>
             <div class="user-hand">
-                <p>PLAYER</p>
+                <div class="player-score">
+                    <span class="score-title">
+                        Your score
+                    </span>
+                    <span class="score-number">
+                        0
+                    </span>
+                </div>
                 <img src="./src/images/blank.png">
             </div>
         </div>
