ADD - desktop style

--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
 
 <body>
     <div class="container">
-        <div class="match-count">Match 1 / 5</div>
-        <div class="match-result">result</div>
+        <div class="match-specs">
+            <div class="match-count">Match 1 / 5</div>
+            <div class="match-result">Match result</div>
+        </div>
         <div class="hands">
             <div class="pc-hand">
                 <div class="pc-score">
@@ -28,7 +30,7 @@
                         0
                     </span>
                 </div>
-                <img src="./src/images/blank.png">
+                <img src="./src/images/rock.png">
             </div>
             <div class="user-hand">
                 <div class="player-score">
@@ -39,7 +41,7 @@
                         0
                     </span>
                 </div>
-                <img src="./src/images/blank.png">
+                <img src="./src/images/rock.png">
             </div>
         </div>
         <div class="user-selection">
